# Mnemostack

./: .gitignore  ARCHITECTURE.md  PLAN.md  README.md  SUGGESTIONS.md  context.md  pyproject.toml  run.sh  start.sh
mnemostack/config/: defaults.yaml  settings.py
mnemostack/core/: state.py
mnemostack/core/compression/: llm_consolidator.py  memory_store.py
mnemostack/core/retrieval/: ast_chunker.py  call_graph.py  communities.py  constants.py  embed.py  faiss_index.py  file_watcher.py  fts_index.py  import_resolver.py  indexer.py  query.py  ranker.py
mnemostack/mcp/: server.py  tools.py
tests/: test_file_watcher.py  test_import_resolver.py  test_mcp_tools.py  test_retrieval.py  test_settings.py
