[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnemostack"
version = "0.1.0"
description = "Graph-aware code retrieval and persistent session memory for AI coding assistants"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "faiss-cpu>=1.9.0",
    "litellm>=1.0.0",
    "watchdog>=6.0.0",
    "numpy>=1.26.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
mnemostack = "mnemostack.mcp.server:run"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.isort]
known-first-party = ["mnemostack"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
